- Fixed immutable listeners list